Implement trash management for removed files: enhance cleanup_local_files function in download_playlist.py to move files to a Trash directory instead of deleting them, preserving playlist structure. Update README.md to reflect new trash behavior and directory organization.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 # Python bytecode
 __pycache__/
 *.py[cod] 
+
+# Data files (should be in user data directory, not project directory)
+tracks.db
+*.db
+downloads/
+Logs/
+
+# Temporary files
+check_db.py
+test_*.py 
