--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-yt-dlp>=2024.4.9 
-Flask>=3.0 
+yt-dlp>=2024.4.9
+Flask>=3.0
 psutil>=5.9.0
+mutagen>=1.47.0
+moviepy>=1.0.3
+imageio-ffmpeg>=0.4.9
 
-# Optional dependencies
-# (none currently) 
+# Notes:
+# - ffprobe/ffmpeg is NOT required at system level for basic operation.
+#   moviepy uses imageio-ffmpeg which bundles a portable ffmpeg binary.
+# - When system ffprobe is available, it can be used as a fallback.
